Implement Avatar features directly on the corresponding class